Closed Bug 335525 Opened 19 years ago Closed 19 years ago

UI dependencies not working for index() changes

Categories

(Core Graveyard :: XForms, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: allan, Assigned: allan)

References

()

Details

(Keywords: fixed1.8.0.5, fixed1.8.1)

Attachments

(2 files)

Refreshing controls on index changes are handled by the repeat itself, and I missed that in the UI dependency patch.
That controls are not bound on form load is bug 335524.
Depends on: 335524
Attached file Testcase
(In reply to comment #0) > Refreshing controls on index changes are handled by the repeat itself, and I > missed that in the UI dependency patch. The problem also appears when binding attributes are changed by script. The control refreshes itself, but it needs to refresh children too. I think we need a nsIModelElementPrivate::RebindControl(nsIXFormsControl) that runs the rebind/refresh procedure correctly for that control, and any children too.
Assignee: aaronr → allan
Attached patch PatchSplinter Review
Tie repeat index() handling to the model UI graph, to let that handle rebinding and refreshing of controls -- properly.
Attachment #222873 - Flags: review?(Olli.Pettay)
Attachment #222873 - Flags: review?(Olli.Pettay) → review+
Attachment #222873 - Flags: review?(doronr)
Attachment #222873 - Flags: review?(doronr) → review+
Fixed on trunk
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Whiteboard: xf-to-branch
Keywords: fixed1.8.1
Keywords: fixed1.8.0.5
Whiteboard: xf-to-branch
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: