[XForms] UI dependencies not working for index() changes. Bug 335525, r=smaug+doronr